--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@fontsource/jost": "^5.0.8",
+    "@fontsource/montserrat": "^5.0.8",
     "@reduxjs/toolkit": "^1.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
